work on related work

--- a/main.bib
+++ b/main.bib
@@ -281,7 +281,7 @@ author = {Saeed Reza Kheradpisheh and Mohammad Ganjtabesh and Simon J. Thorpe an
 keywords = {Spiking neural network, STDP, Deep learning, Object recognition, Temporal coding},
 }
 
- @article{von_der_Malsburg_Stadelmann_Grewe_2022, title={A Theory of Natural Intelligence}, url={http://arxiv.org/abs/2205.00002}, abstractNote={Introduction: In contrast to current AI technology, natural intelligence -- the kind of autonomous intelligence that is realized in the brains of animals and humans to attain in their natural environment goals defined by a repertoire of innate behavioral schemata -- is far superior in terms of learning speed, generalization capabilities, autonomy and creativity. How are these strengths, by what means are ideas and imagination produced in natural neural networks? Methods: Reviewing the literature, we put forward the argument that both our natural environment and the brain are of low complexity, that is, require for their generation very little information and are consequently both highly structured. We further argue that the structures of brain and natural environment are closely related. Results: We propose that the structural regularity of the brain takes the form of net fragments (self-organized network patterns) and that these serve as the powerful inductive bias that enables the brain to learn quickly, generalize from few examples and bridge the gap between abstractly defined general goals and concrete situations. Conclusions: Our results have important bearings on open problems in artificial neural network research.}, note={arXiv:2205.00002 [cs, q-bio]}, number={arXiv:2205.00002}, publisher={arXiv}, author={von der Malsburg, Christoph and Stadelmann, Thilo and Grewe, Benjamin F.}, year={2022}, month=Apr }
+@article{von_der_Malsburg_Stadelmann_Grewe_2022, title={A Theory of Natural Intelligence}, url={http://arxiv.org/abs/2205.00002}, abstractNote={Introduction: In contrast to current AI technology, natural intelligence -- the kind of autonomous intelligence that is realized in the brains of animals and humans to attain in their natural environment goals defined by a repertoire of innate behavioral schemata -- is far superior in terms of learning speed, generalization capabilities, autonomy and creativity. How are these strengths, by what means are ideas and imagination produced in natural neural networks? Methods: Reviewing the literature, we put forward the argument that both our natural environment and the brain are of low complexity, that is, require for their generation very little information and are consequently both highly structured. We further argue that the structures of brain and natural environment are closely related. Results: We propose that the structural regularity of the brain takes the form of net fragments (self-organized network patterns) and that these serve as the powerful inductive bias that enables the brain to learn quickly, generalize from few examples and bridge the gap between abstractly defined general goals and concrete situations. Conclusions: Our results have important bearings on open problems in artificial neural network research.}, note={arXiv:2205.00002 [cs, q-bio]}, number={arXiv:2205.00002}, publisher={arXiv}, author={von der Malsburg, Christoph and Stadelmann, Thilo and Grewe, Benjamin F.}, year={2022}, month=Apr }
 
 @mastersthesis{lehmann,
   author  = "Lehmann, Claude",
@@ -1015,3 +1015,139 @@ terms= {}
 }
 
  @article{Chung_Hsu_Tang_Glass_2019, title={An Unsupervised Autoregressive Model for Speech Representation Learning}, url={http://arxiv.org/abs/1904.03240}, abstractNote={This paper proposes a novel unsupervised autoregressive neural model for learning generic speech representations. In contrast to other speech representation learning methods that aim to remove noise or speaker variabilities, ours is designed to preserve information for a wide range of downstream tasks. In addition, the proposed model does not require any phonetic or word boundary labels, allowing the model to benefit from large quantities of unlabeled data. Speech representations learned by our model significantly improve performance on both phone classification and speaker verification over the surface features and other supervised and unsupervised approaches. Further analysis shows that different levels of speech information are captured by our model at different layers. In particular, the lower layers tend to be more discriminative for speakers, while the upper layers provide more phonetic content.}, note={arXiv:1904.03240 [cs, eess]}, number={arXiv:1904.03240}, publisher={arXiv}, author={Chung, Yu-An and Hsu, Wei-Ning and Tang, Hao and Glass, James}, year={2019}, month={Jun} }
+
+
+
+
+
+@inproceedings{Simmler_Sager_Andermatt_Chavarriaga_Schilling_Rosenthal_Stadelmann_2021, address={Lucerne, Switzerland}, title={A Survey of Un-, Weakly-, and Semi-Supervised Learning Methods for Noisy, Missing and Partial Labels in Industrial Vision Applications}, ISBN={978-1-66543-874-2}, url={https://ieeexplore.ieee.org/document/9474624/}, DOI={10.1109/SDS51136.2021.00012}, booktitle={2021 8th Swiss Conference on Data Science (SDS)}, publisher={IEEE}, author={Simmler, Niclas and Sager, Pascal and Andermatt, Philipp and Chavarriaga, Ricardo and Schilling, Frank-Peter and Rosenthal, Matthias and Stadelmann, Thilo}, year={2021}, month={Jun}, pages={26–31} }
+
+@inbook{Liu_Anguelov_Erhan_Szegedy_Reed_Fu_Berg_2016, address={Cham}, series={Lecture Notes in Computer Science}, title={SSD: Single Shot MultiBox Detector}, volume={9905}, ISBN={978-3-319-46447-3}, url={http://link.springer.com/10.1007/978-3-319-46448-0_2}, DOI={10.1007/978-3-319-46448-0_2}, booktitle={Computer Vision – ECCV 2016}, publisher={Springer International Publishing}, author={Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy, Christian and Reed, Scott and Fu, Cheng-Yang and Berg, Alexander C.}, editor={Leibe, Bastian and Matas, Jiri and Sebe, Nicu and Welling, Max}, year={2016}, pages={21–37}, collection={Lecture Notes in Computer Science}, language={en} }
+
+@inproceedings{He_Gkioxari_Dollar_Girshick_2017, address={Venice}, title={Mask R-CNN}, ISBN={978-1-5386-1032-9}, url={http://ieeexplore.ieee.org/document/8237584/}, DOI={10.1109/ICCV.2017.322}, booktitle={2017 IEEE International Conference on Computer Vision (ICCV)}, publisher={IEEE}, author={He, Kaiming and Gkioxari, Georgia and Dollar, Piotr and Girshick, Ross}, year={2017}, month={Oct}, pages={2980–2988} }
+ 
+@article{Wu_Zhang_Huang_Liang_Yu_2019, title={FastFCN: Rethinking Dilated Convolution in the Backbone for Semantic Segmentation}, url={http://arxiv.org/abs/1903.11816}, abstractNote={Modern approaches for semantic segmentation usually employ dilated convolutions in the backbone to extract high-resolution feature maps, which brings heavy computation complexity and memory footprint. To replace the time and memory consuming dilated convolutions, we propose a novel joint upsampling module named Joint Pyramid Upsampling (JPU) by formulating the task of extracting high-resolution feature maps into a joint upsampling problem. With the proposed JPU, our method reduces the computation complexity by more than three times without performance loss. Experiments show that JPU is superior to other upsampling modules, which can be plugged into many existing approaches to reduce computation complexity and improve performance. By replacing dilated convolutions with the proposed JPU module, our method achieves the state-of-the-art performance in Pascal Context dataset (mIoU of 53.13%) and ADE20K dataset (final score of 0.5584) while running 3 times faster.}, note={arXiv:1903.11816 [cs]}, number={arXiv:1903.11816}, publisher={arXiv}, author={Wu, Huikai and Zhang, Junge and Huang, Kaiqi and Liang, Kongming and Yu, Yizhou}, year={2019}, month={Mar} }
+
+
+@techreport{rumelhart1985learning,
+  title={Learning internal representations by error propagation},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  year={1985},
+  institution={California Univ San Diego La Jolla Inst for Cognitive Science}
+}
+
+@InProceedings{pmlrv27baldi12a,
+  title = 	 {Autoencoders, Unsupervised Learning, and Deep Architectures},
+  author = 	 {Baldi, Pierre},
+  booktitle = 	 {Proceedings of ICML Workshop on Unsupervised and Transfer Learning},
+  pages = 	 {37--49},
+  year = 	 {2012},
+  editor = 	 {Guyon, Isabelle and Dror, Gideon and Lemaire, Vincent and Taylor, Graham and Silver, Daniel},
+  volume = 	 {27},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Bellevue, Washington, USA},
+  month = 	 {02 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v27/baldi12a/baldi12a.pdf},
+  url = 	 {https://proceedings.mlr.press/v27/baldi12a.html},
+  abstract = 	 {Autoencoders play a fundamental role in unsupervised learning and in deep architectures for transfer learning and other tasks. In spite of their fundamental role, only linear autoencoders over the real numbers have been solved analytically. Here we present a general mathematical framework for the study of both linear and non-linear autoencoders. The framework allows one to derive an analytical treatment for the most non-linear autoencoder, the Boolean autoencoder. Learning in the Boolean autoencoder is equivalent to a clustering problem that can be solved in polynomial time when the number of clusters is small and becomes NP complete when the number of clusters is large. The framework sheds light on the different kinds of autoencoders, their learning complexity, their horizontal and vertical composability in deep architectures, their critical points, and their fundamental connections to clustering, Hebbian learning, and information theory.}
+}
+
+ @inproceedings{Ranzato_Huang_Boureau_LeCun_2007, address={Minneapolis, MN, USA}, title={Unsupervised Learning of Invariant Feature Hierarchies with Applications to Object Recognition}, ISBN={978-1-4244-1179-5}, url={http://ieeexplore.ieee.org/document/4270182/}, DOI={10.1109/CVPR.2007.383157}, booktitle={2007 IEEE Conference on Computer Vision and Pattern Recognition}, publisher={IEEE}, author={Ranzato, Marc’Aurelio and Huang, Fu Jie and Boureau, Y-Lan and LeCun, Yann}, year={2007}, month={Jun}, pages={1–8} }
+
+
+
+
+@inproceedings{10-5555-3042573-3042641,
+	author = {Le, Quoc V. and Ranzato, Marc Aurelio and Monga, Rajat and Devin, Matthieu and Chen, Kai and Corrado, Greg S. and Dean, Jeff and Ng, Andrew Y.},
+	title = {Building High-Level Features Using Large Scale Unsupervised Learning},
+	year = {2012},
+	isbn = {9781450312851},
+	publisher = {Omnipress},
+	address = {Madison, WI, USA},
+	booktitle = {Proceedings of the 29th International Coference on International Conference on Machine Learning},
+	pages = {507–514},
+	numpages = {8},
+	location = {Edinburgh, Scotland},
+	series = {ICML'12}
+}
+
+@inproceedings{10-1145-1390156-1390294, author = {Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine}, title = {Extracting and Composing Robust Features with Denoising Autoencoders}, year = {2008}, isbn = {9781605582054}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, url = {https://doi.org/10.1145/1390156.1390294}, doi = {10.1145/1390156.1390294}, abstract = {Previous work has shown that the difficulties in learning deep generative or discriminative models can be overcome by an initial unsupervised learning step that maps inputs to useful intermediate representations. We introduce and motivate a new training principle for unsupervised learning of a representation based on the idea of making the learned representations robust to partial corruption of the input pattern. This approach can be used to train autoencoders, and these denoising autoencoders can be stacked to initialize deep architectures. The algorithm can be motivated from a manifold learning and information theoretic perspective or from a generative model perspective. Comparative experiments clearly show the surprising advantage of corrupting the input of autoencoders on a pattern classification benchmark suite.}, booktitle = {Proceedings of the 25th International Conference on Machine Learning}, pages = {1096–1103}, numpages = {8}, location = {Helsinki, Finland}, series = {ICML '08} }
+
+@article{Kingma_Welling_2014, title={Auto-Encoding Variational Bayes}, url={http://arxiv.org/abs/1312.6114}, abstractNote={How can we perform efficient inference and learning in directed probabilistic models, in the presence of continuous latent variables with intractable posterior distributions, and large datasets? We introduce a stochastic variational inference and learning algorithm that scales to large datasets and, under some mild differentiability conditions, even works in the intractable case. Our contributions is two-fold. First, we show that a reparameterization of the variational lower bound yields a lower bound estimator that can be straightforwardly optimized using standard stochastic gradient methods. Second, we show that for i.i.d. datasets with continuous latent variables per datapoint, posterior inference can be made especially efficient by fitting an approximate inference model (also called a recognition model) to the intractable posterior using the proposed lower bound estimator. Theoretical advantages are reflected in experimental results.}, note={arXiv:1312.6114 [cs, stat]}, number={arXiv:1312.6114}, publisher={arXiv}, author={Kingma, Diederik P. and Welling, Max}, year={2014}, month={May} }
+
+@inproceedings{10-5555-3104482-3104587, author = {Rifai, Salah and Vincent, Pascal and Muller, Xavier and Glorot, Xavier and Bengio, Yoshua}, title = {Contractive Auto-Encoders: Explicit Invariance during Feature Extraction}, year = {2011}, isbn = {9781450306195}, publisher = {Omnipress}, address = {Madison, WI, USA}, abstract = {We present in this paper a novel approach for training deterministic auto-encoders. We show that by adding a well chosen penalty term to the classical reconstruction cost function, we can achieve results that equal or surpass those attained by other regularized auto-encoders as well as denoising auto-encoders on a range of datasets. This penalty term corresponds to the Frobenius norm of the Jacobian matrix of the encoder activations with respect to the input. We show that this penalty term results in a localized space contraction which in turn yields robust features on the activation layer. Furthermore, we show how this penalty term is related to both regularized auto-encoders and denoising auto-encoders and how it can be seen as a link between deterministic and non-deterministic auto-encoders. We find empirically that this penalty helps to carve a representation that better captures the local directions of variation dictated by the data, corresponding to a lower-dimensional non-linear manifold, while being more invariant to the vast majority of directions orthogonal to the manifold. Finally, we show that by using the learned features to initialize a MLP, we achieve state of the art classification error on a range of datasets, surpassing other methods of pretraining.}, booktitle = {Proceedings of the 28th International Conference on International Conference on Machine Learning}, pages = {833–840}, numpages = {8}, location = {Bellevue, Washington, USA}, series = {ICML'11} }
+
+@article{Elharrouss_Almaadeed_Al-Maadeed_Akbari_2020, title={Image Inpainting: A Review}, volume={51}, ISSN={1370-4621, 1573-773X}, DOI={10.1007/s11063-019-10163-0}, number={2}, journal={Neural Processing Letters}, author={Elharrouss, Omar and Almaadeed, Noor and Al-Maadeed, Somaya and Akbari, Younes}, year={2020}, month={Apr}, pages={2007–2028}, language={en} }
+ 
+@inproceedings{Pathak_Krahenbuhl_Donahue_Darrell_Efros_2016, address={Las Vegas, NV, USA}, title={Context Encoders: Feature Learning by Inpainting}, ISBN={978-1-4673-8851-1}, url={http://ieeexplore.ieee.org/document/7780647/}, DOI={10.1109/CVPR.2016.278}, booktitle={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, publisher={IEEE}, author={Pathak, Deepak and Krahenbuhl, Philipp and Donahue, Jeff and Darrell, Trevor and Efros, Alexei A.}, year={2016}, month={Jun}, pages={2536–2544} }
+
+@inproceedings{he2022masked,
+  title={Masked autoencoders are scalable vision learners},
+  author={He, Kaiming and Chen, Xinlei and Xie, Saining and Li, Yanghao and Doll{\'a}r, Piotr and Girshick, Ross},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={16000--16009},
+  year={2022}
+}
+
+@inproceedings{shi2022adversarial,
+  title={Adversarial masking for self-supervised learning},
+  author={Shi, Yuge and Siddharth, N and Torr, Philip and Kosiorek, Adam R},
+  booktitle={International Conference on Machine Learning},
+  pages={20026--20040},
+  year={2022},
+  organization={PMLR}
+}
+
+@inproceedings{komodakis2018unsupervised,
+  title={Unsupervised representation learning by predicting image rotations},
+  author={Komodakis, Nikos and Gidaris, Spyros},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2018}
+}
+
+@article{Zhai_Oliver_Kolesnikov_Beyer_2019, title={S4L: Self-Supervised Semi-Supervised Learning}, url={http://arxiv.org/abs/1905.03670}, abstractNote={This work tackles the problem of semi-supervised learning of image classifiers. Our main insight is that the field of semi-supervised learning can benefit from the quickly advancing field of self-supervised visual representation learning. Unifying these two approaches, we propose the framework of self-supervised semi-supervised learning and use it to derive two novel semi-supervised image classification methods. We demonstrate the effectiveness of these methods in comparison to both carefully tuned baselines, and existing semi-supervised learning methods. We then show that our approach and existing semi-supervised methods can be jointly trained, yielding a new state-of-the-art result on semi-supervised ILSVRC-2012 with 10% of labels.}, note={arXiv:1905.03670 [cs]}, number={arXiv:1905.03670}, publisher={arXiv}, author={Zhai, Xiaohua and Oliver, Avital and Kolesnikov, Alexander and Beyer, Lucas}, year={2019}, month={Jul} }
+
+@article{khosla2020supervised,
+  title={Supervised contrastive learning},
+  author={Khosla, Prannay and Teterwak, Piotr and Wang, Chen and Sarna, Aaron and Tian, Yonglong and Isola, Phillip and Maschinot, Aaron and Liu, Ce and Krishnan, Dilip},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={18661--18673},
+  year={2020}
+}
+
+
+@inproceedings{chen2020simple,
+  title={A simple framework for contrastive learning of visual representations},
+  author={Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
+  booktitle={International conference on machine learning},
+  pages={1597--1607},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{he2020momentum,
+  title={Momentum contrast for unsupervised visual representation learning},
+  author={He, Kaiming and Fan, Haoqi and Wu, Yuxin and Xie, Saining and Girshick, Ross},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={9729--9738},
+  year={2020}
+}
+
+@article{caron2020unsupervised,
+  title={Unsupervised learning of visual features by contrasting cluster assignments},
+  author={Caron, Mathilde and Misra, Ishan and Mairal, Julien and Goyal, Priya and Bojanowski, Piotr and Joulin, Armand},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={9912--9924},
+  year={2020}
+}
+
+@article{chen2022semi,
+  title={Semi-Supervised and Unsupervised Deep Visual Learning: A Survey},
+  author={Chen, Yanbei and Mancini, Massimiliano and Zhu, Xiatian and Akata, Zeynep},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year={2022},
+  publisher={IEEE}
+}
