--- a/main.tex
+++ b/main.tex
@@ -134,6 +134,10 @@
 \input{tex/related_work}
 
 \setchapterpreamble[u]{\margintoc}
+\chapter{Preliminary Study}\chlbl{pre_study}
+\input{tex/pre_study}
+
+\setchapterpreamble[u]{\margintoc}
 \chapter{Future Work}\chlbl{future_work}
 \input{tex/future_work}
 
