--- a/tex/pre_study.tex
+++ b/tex/pre_study.tex
@@ -1,8 +1,8 @@
 %% pre_study.tex
-In this preliminary study, I examine how representations of typical deep learning architectures look like.
+In this preliminary study, I examine what representations of typical deep learning architectures look like.
 Especially network fragments are of interest, i.e. (groups of) neurons that represent certain (parts of) objects.
 According to \sidecite{von_der_Malsburg_Stadelmann_Grewe_2022}, net fragments are a compositional data structure (c.f. Section \secref*{natural_intelligence}).
-Meaning that net fragments in the first layers are simpler and are composed to more complex fragments in subsequent layers.
+Meaning that net fragments in the last layers are complexer and are composed of simpler fragments of previous layers.
 Thus, some (group) of neurons in the first layer should be active if some low-level features (e.g. part of objects) are present in the input.
 If several groups of such neurons are active, these neurons activate some other neurons in subsequent layers that represent higher-level net fragments.
 
@@ -10,12 +10,12 @@ A typical task in the field of image analysis is image classification (cf. Secti
 Usually, the last layer of an image classification architecture has exactly as many neurons as there are classes to predict.
 Each neuron corresponds to a class, and the neuron with the highest activity (i.e. the most active neuron) is eventually used to predict the image-level label.
 Such architectures thus have the design constraint that the last layer of neurons must represent distinct classes.
-Thus, the each neuron in the last layer can be interpreted as a net fragment that represent a class-object.
-Since the last layer of a classification network represents entire classes, such architectures seem to be well suited to investigate whether preceding layers represent less complex objects that are composed by the last layer.
+Thus, each neuron in the last layer can be interpreted as a net fragment that represents a class-object.
+Since the last layer of a classification network represents entire classes, such architectures seem to be well suited to investigate whether the preceding layers represent less complex objects that are composed by the last layer.
 
 Deep Learning architectures usually consist of several layers with millions of neurons, leading to millions of activations.
 In addition, the input data is processed in a complex way, which makes the analysis of activations difficult.
-In order to simplify the analysis of network activations, a novel straightforward classification task is proposed;
+To simplify the analysis of network activations, a novel straightforward classification task is proposed;
 The dataset consists of $10$ images as shown in Figure \figref*{pre_study_dataset}.
 Each image has a size of $9\times9$ pixels and represents a number between $0$ and $9$.
 The images have only one channel and contain binary values (i.e. $0$ or $1$).
@@ -32,9 +32,9 @@ This task is neither for humans nor deep learning architectures challenging.
 However, it is simple enough to investigate the activations of neural networks and to search for net fragments.
 
 The following example explains how network fragments could theoretically be built in this data set.
-In total, the data set consists of $9$ base lines, that can be composed to $10$ different digits.
-A low-level net fragment could represent such a base line and be composed to higher-level net fragments such as digits.
-Figure \figref*{pre_study_components} visualizes these basic components (base lines on the left, digits on the right).
+In total, the data set consists of $9$ basic lines, that can be composed to $10$ different digits.
+A low-level net fragment could represent such a basic line and be composed to higher-level net fragments such as digits.
+Figure \figref*{pre_study_components} visualizes these basic components (basic lines on the left, digits on the right).
 
 \begin{figure}[h]
     \centering
@@ -48,7 +48,7 @@ The composition can either take place across one or multiple layers.
 The visualization in Figure \figref*{pre_study_components} can be interpreted as a composition across one layer, i.e. the low-level fragments are combined to high-level fragments within one step.
 
 The composition can also take place across multiple layers. 
-An exemplary composition of network fragments of the number $9$ across $4$ subsequent layer is shown in Figure \figref*{pre_study_composition}.
+An exemplary composition of network fragments of the number $9$ across $4$ subsequent layers is shown in Figure \figref*{pre_study_composition}.
 In this example, it is shown that a fragment representing a digit can be composed of other fragments that also represent digits.
 However, net fragments do not necessarily have to represent digits as shown in this example but can be a composition of multiple lines without a specific meaning.
 
@@ -59,8 +59,8 @@ However, net fragments do not necessarily have to represent digits as shown in t
     \figlbl{pre_study_composition}
 \end{figure}
 
-The fragments described so far are to be understood as explanatory example.
-A neural network might extract features in the first layers that do not correspond to vertical and horizontal lines and subsequently compose those features into more complex network fragments that are not as simple to interpret.
+The fragments described so far are to be understood as an explanatory example.
+A neural network might extract features in the first layers that do not correspond to vertical and horizontal lines and subsequently compose those features into more complex network fragments that are not as simple-to-interpret.
 Meaning that looking for neurons of a (for us humans) simple to interpret meaning might be hard.
 Regardless of what these net fragments represent, the network should have certain characteristics;
 If a neuron or a group of neurons are part of a net fragment that represents a feature in the input, then these neuron(s) should be strongly active if the feature is present and not or only very weakly active if the feature is not present.
@@ -68,26 +68,26 @@ This leads to a sparse activation map and net fragments should only be active fo
 Furthermore, digits have common traits;
 for example, the $7$ is contained in the $3$, the $3$ is contained in the $9$ and the $9$ is contained in the $8$.
 The $1$, on the other hand, has nothing in common with the $4$, etc.
-This means that at least one net-fragment should be active for the $7$, $3$, $9$, and $8$ but not all net-fragments that are composed to the digit $8$ should be active if the input depicts a $9$, $3$, or $7$.
+This means that at least one net fragment should be active for the $7$, $3$, $9$, and $8$ but not all net fragments that are composed to the digit $8$ should be active if the input depicts a $9$, $3$, or $7$.
 The net fragments between the $1$ and $4$, on the other hand, should be completely different.
-These properties should be visible in the activations of the network if it forms proper net fragments and are analysed in the following.
+These properties should be visible in the activations of the network if it forms proper net fragments and is analysed in the following.
 
 \section{Methods}\seclbl{pre_study_methods}
 To investigate the emergence of net fragments, different deep learning models are trained.
-The models are trained on a supervised classification task with the goal to predict the corresponding class of the images of the dataset shown in Figure \figref*{pre_study_dataset}.
+The models are trained on a supervised classification task to predict the corresponding class of the images of the dataset shown in Figure \figref*{pre_study_dataset}.
 The model's parameters are optimised by minimising the cross-entropy loss with the Adam optimizer \sidecite{Kingma2015AdamAM}.
 The learning rate is $5 \cdot 10^{-4}$, the mini-batch size is $32$ samples and the model is trained for a total of $10$ epochs.
 
-The models used have different feature extractors consisting of either convolutional (Conv.) layers or fully connected layers (FCN) as shown in Table \tabref*{pre_study_models}.
-One model (No. $11$) has a Conv. layer as feature extractor with two hand-crafted kernels to extract horizontal and vertical lines.
+The models used have different feature extractors consisting of either convolutional (Conv.) layers (models no. $1$-$8$, no. $11$) or fully connected (FC) layers (models no. $10$) as shown in Table \tabref*{pre_study_models}.
+Model no. $9$ has no feature extractor as the input images are so simple that they can be considered as features by themself, model no. $10$ uses a FC layer as feature extractor, and model no. $11$ has a Conv. layer with two hand-crafted kernels to extract horizontal and vertical lines as feature extractor.
 After the feature extractor, all models have a similar ``head'' consisting of $2$ fully connected layers.
-The feature extractor aims to extract certain features from the image, that are combined into higher level net fragments in the first fully connected layer of the ``head'' and composed into predictions per class (i.e. net fragments corresponding to classes) in the last fully connected layer of the ``head''.
-The first FCN layer of the ``head'' consists of $12$ neurons.
+The feature extractor aims to extract certain features from the image, that are combined into higher-level net fragments in the first fully connected layer of the ``head'' and composed into predictions per class (i.e. net fragments corresponding to classes) in the last fully connected layer of the ``head''.
+The first FC layer of the ``head'' consists of $12$ neurons.
 The number of neurons was determined empirically by training various architectures and examining the number of active neurons.
 It was found that there are always fewer than $12$ neurons active and that this capacity is therefore sufficient.
-The last fully connected layer consists of $10$ neurons, since this corresponds to the number of classes to predict.
+The last fully connected layer consists of $10$ neurons since this corresponds to the number of classes to predict.
 The encoders of the models used are described in more detail in Table \tabref*{pre_study_models}.
-The ``head' is identical for all models and consists of a sequence of the following layers; FCN ($12$ neurons) $\rightarrow$ ReLU $\rightarrow$ FCN ($10$ neurons) $\rightarrow$ Softmax.
+The ``head' is identical for all models and consists of a sequence of the following layers; FC ($12$ neurons) $\rightarrow$ ReLU $\rightarrow$ FC ($10$ neurons) $\rightarrow$ Softmax.
 
 \begin{table}[h]
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
@@ -107,8 +107,8 @@ The ``head' is identical for all models and consists of a sequence of the follow
 		6 & Conv. Layer (kernel size=$3\times3$, channels=$4$) $\rightarrow$ ReLU $\rightarrow$ Conv. Layer (kernel size=$3\times3$, channels=$8$) $\rightarrow$ ReLU $\rightarrow$ head\\ \hline
 		7 & Conv. Layer (kernel size=$3\times3$, channels=$2$) $\rightarrow$ ReLU $\rightarrow$ Max Pooling $\rightarrow$ Conv. Layer (kernel size=$3\times3$, channels=$4$) $\rightarrow$ ReLU $\rightarrow$ head\\ \hline
 		8 & Conv. Layer (kernel size=$3\times3$, channels=$4$) $\rightarrow$ ReLU $\rightarrow$ Max Pooling $\rightarrow$ Conv. Layer (kernel size=$3\times3$, channels=$8$) $\rightarrow$ ReLU $\rightarrow$ head\\ \hline
-		9 & FCN ($9*9$ neurons) $\rightarrow$ ReLU $\rightarrow$ head \\ \hline
-		10 & FCN ($9*9$ neurons) $\rightarrow$ FCN ($9*9$ neurons) $\rightarrow$ ReLU $\rightarrow$ head \\ \hline
+		9 & head \\ \hline
+		10 & FC ($9*9$ neurons) $\rightarrow$ ReLU $\rightarrow$ head \\ \hline
 		11 & Hand Crafted Conv. Layer for vertical \& horizontal edge detection (kernel size=$3\times3$, channels=$2$) $\rightarrow$ ReLU $\rightarrow$ head \\
         \hline
     \end{tabular}
@@ -119,36 +119,36 @@ After each epoch, the model's weights are stored as well as the activations of e
 These vectors are visualized and investigated for net fragments.
 
 Furthermore, the most relevant input features for a fully trained model are analysed.
-This is done by freezing the model's parameter so that they cannot change.
+This is done by freezing the model's parameters so that they cannot change.
 Instead, an empty image is fed into the network and updated with backpropagation of error such that the probability for a given class is maximized.
 This leads to an input image that has the highest probability to be predicted by the model as a specific class (e.g. generate the image that has the highest probability to be predicted as digit $3$ by the model).
 
 
 \section{Results}\seclbl{pre_study_results}
 All the models learn to classify these digits perfectly within a few epochs.
-Interestingly, not only the accuracy reaches $100\%$ but some models also achieve a cross entropy loss of $0.0$, meaning that they are able to find a global minimum.
-However, the goal is not to achieve a high accuracy but to exhibit net fragments.
+Interestingly, not only the accuracy reaches $100\%$ but some models also achieve a cross-entropy loss of $0.0$, meaning that they can find a global minimum.
+However, the goal is not to achieve high accuracy but to exhibit net fragments.
 It is not feasible to visualise all activations of all layers in this thesis.
-Therefore, only the activations of the second last FCN layer (i.e. the first FCN layer of the ``head'') after the ReLU function are shown.
-Since the last layer contains the net fragments that depicts classes, this is the layer with the highest-level fragments.
-Furthermore, it is the only layer that has a global view on the input, i.e. can access all the features extracted by the encoder\sidenote{convolutional layers only consider a local neighbourhood by sliding a kernel over the input (c.f. Section \secref{cnns})} (expect for the encoder consisting of FCN layers only).
-Some higher level net fragments should be visible in this layer, that are subsequently composed in the last layer to net fragments corresponding to classes.
-Interested readers who want to investigate the activations from all layers as well as the network weights by themselves can view an interactive visualisation at \url{http://160.85.252.38:8501}.
+Therefore, only the activations of the second last FC layer (i.e. the first FC layer of the ``head'') after the ReLU function are shown.
+Since the last layer contains the net fragments that depict classes, this is the layer with the highest-level fragments.
+Furthermore, it is the only layer that has a global view on the input, i.e. can access all the features extracted by the encoder\sidenote{convolutional layers only consider a local neighbourhood by sliding a kernel over the input (c.f. Section \secref{cnns})} (except for the encoder consisting of FC layers only).
+Some higher-level net fragments should be visible in this layer, which are subsequently composed in the last layer to net fragments corresponding to classes.
+Interested readers who want to investigate the activations from all layers, as well as the network weights by themselves, can view an interactive visualisation at \url{http://160.85.252.38:8501}.
 
 \figref{pre_study_activations} shows the activations of the first fully connected layer in the ``head'' of the different models.
-The FCN layer has $12$ neurons whose activation is indicated along the vertical axis (per model), the horizontal axis depicts the activation of the same neuron for the classes $0$-$9$.
+The FC layer has $12$ neurons whose activation is indicated along the vertical axis (per model), and the horizontal axis depicts the activation of the same neuron for the classes $0$-$9$.
 For example, the circle in the top left corner indicates the activation of the first neuron for class $0$, the circle in the top right corner the activation of the first neuron for class $9$, and the circle in the bottom left corner the activation of the last neuron for class $0$.
-Blue circles show activations that are exactly $0$, red circles are low activations $>0$, green circles represent strong activations\sidenote{activations $<0$ do not exist because they are set to exactly $0$ by the ReLU function}.
+Blue circles show activations that are exactly $0$, red circles are low activations $>0$, and green circles represent strong activations\sidenote{activations $<0$ do not exist because they are set to exactly $0$ by the ReLU function}.
 
 It can be seen in the visualization that none of the models utilises all $12$ neurons and certain neurons are always inactive regardless of the class.
 Also, no obvious net fragments can be identified;
-Most neurons are always similarly strong active regardless of the class.
+Most neurons are always similarly strongly active regardless of the class.
 If net fragments are formed, however, the neurons of a fragment would have to be strongly active in the presence of certain features and weakly active otherwise.
 Such behaviour is not observable in these activations.
 
 Furthermore, some digits are very similar and differ in only two pixels.
 Some examples are the digit pairs $5$ and $6$, $8$ and $9$, $0$ and $8$, or $3$ and $9$.
-However, when the activations of the corresponding classes are compared, it is obvious that almost always all activations change a little bit and not one neuron is turned on and of depending on the presence of these two pixels.
+However, when the activations of the corresponding classes are compared, it is obvious that almost always all activations change a little bit, and not one neuron is turned on or off depending on the presence of these two pixels.
 
 \begin{figure}[h]
     \centering
@@ -161,10 +161,10 @@ However, when the activations of the corresponding classes are compared, it is o
 %For different classes, however, these neurons do not switch on or off, but the strength of the activity changes.
 
 \figref{pre_study_inputs_max} visualizes the input that maximizes the probability for each class.
-It is obvious that all models focuses on wrong features and it can be assumed that these networks would not be robust to slight perturbations in the input.
-This also indicates that net fragments are not present in current deep learning models (or at least not to the extent that is desirable);
+It is obvious that all models focus on the wrong features and it can be assumed that these networks would not be robust to slight perturbations in the input.
+This also indicates that net fragments are not present in current deep learning models (or at least not to the desirable extent);
 if a class-level net fragment is composed of several lower-level net fragments, then some of these lower-level net fragments have to be active.
-Since this lower-level net fragments represent specific input features, according pixel constellations should be visible in this visualisation.
+Since these lower-level net fragments represent specific input features, corresponding pixel constellations should be visible in this visualisation.
 However, since these rather random-looking pixel combinations maximise the probability of predicting a specific class, this suggests that pixel combinations are not composed into hierarchically more complex net fragments.
 
 \begin{figure}[h]
